--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mariadb://15.164.153.191:3306/radio?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.username=radio
-spring.datasource.password=4321
+spring.datasource.url=jdbc:h2:~/radiodata
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
