--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #H2
 
- spring.datasource.url=jdbc:h2:~/radiodata
- spring.datasource.driverClassName=org.h2.Driver
- spring.datasource.username=sa
- spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#  spring.datasource.url=jdbc:h2:~/radiodata
+#  spring.datasource.driverClassName=org.h2.Driver
+#  spring.datasource.username=sa
+#  spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 
@@ -16,12 +16,13 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # MariaDB
 
-#spring.datasource.url=jdbc:mariadb://34.210.43.57:3306/radio?serverTimezone=UTC&characterEncoding=UTF-8
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://34.210.43.57:3306/radio?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
 
 
 
