etity수정,모델수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #H2
 
-#  spring.datasource.url=jdbc:h2:~/radiodata
-#  spring.datasource.driverClassName=org.h2.Driver
-#  spring.datasource.username=sa
-#  spring.datasource.password=
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+  spring.datasource.url=jdbc:h2:~/radiodata
+  spring.datasource.driverClassName=org.h2.Driver
+  spring.datasource.username=sa
+  spring.datasource.password=
+ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 
 
@@ -16,13 +16,13 @@
 
 # MariaDB
 
-spring.datasource.url=jdbc:mariadb://34.210.43.57:3306/radio?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
+#spring.datasource.url=jdbc:mariadb://34.210.43.57:3306/radio?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.show_sql=true
 
 
 
