--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -56,8 +62,10 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		
 
 	</dependencies>
+
 
 	<build>
 		<plugins>
@@ -73,6 +81,12 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+      	<groupId>com.hubspot.maven.plugins</groupId>
+        <artifactId>prettier-maven-plugin</artifactId>
+        <!-- Find the latest version at https://github.com/jhipster/prettier-java/releases -->
+        <version>0.8</version>
+    </plugin>
 		</plugins>
 	</build>
 
